test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_function_param_any_2.plx
pub fn foo(x: i32, y: any) i32 {
    return x + y
}

pub fn main(none) i32 {
    return 0
}
